refactor: add metatags, improve design

--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,8 @@ body {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
+  background-image: url('assets/img/education-day-scene-fantasy-style-aesthetic.jpg');
+  background-position: center center;
 }
 
 h1 {
