--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -1,15 +1,21 @@
 .main {
   min-height: 100vh;
-  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  background: #333;
   padding: 20px;
   font-family: 'Arial', sans-serif;
-  width: 80%;
+  width: 100%;
   max-width: 1440px;
   font-family: "Palatino Linotype", Palatino, Georgia, serif;
   background: #1a252f;
+  opacity: 88%;
   color: #e0e0e0;
-  margin: 0 auto; 
+  margin: 0 auto;
+  border: 1px solid rgb(8, 182, 251);
+  border-radius: 10px;
+  box-shadow: 
+    0 0 5px #87CEEB,         
+    0 0 10px #87CEEB,        
+    0 0 15px #00B7EB,      
+    inset 0 0 5px #87CEEB;
 }
 
 .dateInputs {
@@ -23,41 +29,5 @@
     flex-direction: column;
     align-items: center;
     gap: 15px;
-  }
-}
-
-
-footer {
-  background: rgba(255, 255, 255, 0.9);
-  background:#666;
-  padding: 20px;
-  text-align: center;
-  margin-top: 40px;
-  border-top: 1px solid #e1e5e9;
-  
-  p {
-    margin: 0;
-    color:#333;
-    font-size: 0.9rem;
-    
-    a {
-      color: #740001;
-      text-decoration: none;
-      
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-}
-
-@media (max-width: 480px) {
-
-  footer {
-    padding: 15px;
-    
-    p {
-      font-size: 0.8rem;
-    }
   }
 }
