feat: add ErrorBoundary

--- a/src/global.scss
+++ b/src/global.scss
@@ -32,8 +32,9 @@ body {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  background-image: url('assets/img/education-day-scene-fantasy-style-aesthetic.jpg');
+  background-image: url('assets/img/bg-image.jpg');
   background-position: center center;
+  background-repeat: no-repeat;
 }
 
 h1 {
