--- a/src/components/Chart/Chart.module.scss
+++ b/src/components/Chart/Chart.module.scss
@@ -7,6 +7,10 @@
   background: $background-color;
   color: $text-color;
   width: $dashboard-width;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
 }
 
 .dashboardTitle {
