refactor: reorganize folders, modify naming

--- a/src/global.scss
+++ b/src/global.scss
@@ -32,7 +32,7 @@ body {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  background-image: url('assets/img/bg-image.jpg');
+  background-image: url('/bg-image.jpg');
   background-position: center center;
   background-repeat: no-repeat;
 }
