--- a/src/components/DateFilter/DateFilter.module.scss
+++ b/src/components/DateFilter/DateFilter.module.scss
@@ -88,7 +88,7 @@
 
     input {
       width: 100%;
-      max-width: $input-mobile-max-width;
+      // max-width: $input-mobile-max-width;
       min-width: $input-mobile-min-width;
     }
   }
