--- a/src/components/DateFilter/DateFilter.module.scss
+++ b/src/components/DateFilter/DateFilter.module.scss
@@ -84,7 +84,7 @@
 
   .error {
     color: $error-color;
-    font-size: $student-label-font-size;
+    font-size: $error-message-font-size;
     margin-top: 5px;
     padding-left: 5px;
   }
@@ -134,20 +134,36 @@
 }
 
 .applyButton {
-  background: linear-gradient(135deg, $apply-button-start 0%, $apply-button-end 100%);
+  background: linear-gradient(
+    135deg,
+    $apply-button-start 0%,
+    $apply-button-end 100%
+  );
   color: $white-text;
 
   &:hover:not(:disabled) {
-    background: linear-gradient(135deg, $apply-button-hover-start 0%, $apply-button-hover-end 100%);
+    background: linear-gradient(
+      135deg,
+      $apply-button-hover-start 0%,
+      $apply-button-hover-end 100%
+    );
   }
 }
 
 .clearButton {
-  background: linear-gradient(135deg, $clear-button-start 0%, $clear-button-end 100%);
+  background: linear-gradient(
+    135deg,
+    $clear-button-start 0%,
+    $clear-button-end 100%
+  );
   color: $white-text;
 
   &:hover:not(:disabled) {
-    background: linear-gradient(135deg, $clear-button-hover-start 0%, $clear-button-hover-end 100%);
+    background: linear-gradient(
+      135deg,
+      $clear-button-hover-start 0%,
+      $clear-button-hover-end 100%
+    );
   }
 }
 
@@ -167,7 +183,7 @@
     padding: $date-filter-mobile-padding;
 
     h2 {
-      font-size: $date-filter-mobile-heading-font-size;
+      font-size: $error-message-font-size;
     }
   }
 
@@ -177,7 +193,7 @@
     }
 
     .error {
-      font-size: $mobile-label-font-size; // Adjusted for smaller screens
+      font-size: $error-message-font-size;
     }
   }
 }
@@ -208,7 +224,7 @@
     }
 
     .error {
-      font-size: $mobile-label-font-size;
+      font-size: $error-message-font-size;
     }
   }
 
